--- a/prepare_data.ipynb
+++ b/prepare_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "821bbdbe-5736-4548-b007-f57f5d805100",
    "metadata": {},
    "outputs": [],
@@ -24,81 +24,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "332b9653-efac-4375-afa7-ffe1f2e8e68c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "today = datetime.date.today().strftime(\"%d-%m-%Y\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "5503ef43-d0bb-4b8f-a43b-e95be8d07536",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Population downloaded\n"
-     ]
-    }
-   ],
-   "source": [
-    "population_link = 'https://ec.europa.eu/eurostat/api/dissemination/sdmx/2.1/data/DEMO_R_PJANGROUP/?format=SDMX-CSV&lang=en&label=both'\n",
-    "downloaded_data = requests.get(population_link)\n",
-    "with open('data/Data/old_population.csv', 'wb') as file:\n",
-    "    file.write(downloaded_data.content)\n",
-    "print('Population downloaded')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "e68225fc-b194-4ea1-af4d-e59c678ded94",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deaths downloaded\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Download and unzip data file\n",
-    "deaths_data_link = 'https://ec.europa.eu/eurostat/api/dissemination/sdmx/2.1/data/DEMO_R_MWK2_05/?format=SDMX-CSV&lang=en&label=both'\n",
-    "downloaded_data = requests.get(deaths_data_link)\n",
-    "with open('data/Data/old_deaths.csv', 'wb') as file:\n",
-    "    file.write(downloaded_data.content)\n",
-    "print('Deaths downloaded')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "fe1226b7-bdba-45f9-b1f8-2832b83f2078",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "data_dir_path = f'data/World/{today}'\n",
-    "with open(f'{data_dir_path}/countries.json', 'r') as file:\n",
-    "    countries = json.load(file)"
+    "today = datetime.date.today().strftime(\"%d-%m-%Y\")\n",
+    "data_dir_path = f'data/World/{today}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "138552d9-95a8-40d8-8934-c5e1b666c7cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "read = open('data/Data/old_population.csv', 'r', encoding='utf-8')\n",
+    "reader = csv.reader(read)\n",
+    "countries = {}\n",
+    "for index, row in enumerate(reader):\n",
+    "    if index in [0]:\n",
+    "        continue\n",
+    "    short, country = row[6].split(':')\n",
+    "    if len(short) == 2 and country not in countries.keys():\n",
+    "        if short == 'DE':\n",
+    "            countries['Germany'] = short\n",
+    "        else:\n",
+    "            countries[country] = short\n",
+    "with open(f'{data_dir_path}/eurostat_countries.json', 'w') as file:\n",
+    "    json.dump(countries, file, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b340c5d2-8121-456b-a615-71821cd31b95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Population files prepared\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_name = 'old_population.csv'\n",
+    "with ExitStack() as stack:\n",
+    "    writer_dict = {}\n",
+    "    for country in countries.keys():\n",
+    "        if not os.path.exists(f'{data_dir_path}/{country}'):\n",
+    "            os.mkdir(f'{data_dir_path}/{country}')\n",
+    "        file_list = stack.enter_context(open(f'{data_dir_path}/{country}/{file_name}', 'w'))\n",
+    "        writer_dict[countries[country]] = csv.writer(file_list, delimiter=',')\n",
+    "        writer_dict[countries[country]].writerow(['Year', 'Region', 'Age group', 'Sex', 'Value'])\n",
+    "    read = stack.enter_context(open('data/Data/old_population.csv', 'r', encoding='utf-8'))\n",
+    "    reader = csv.reader(read)\n",
+    "    for index, row in enumerate(reader):\n",
+    "        if index in [0]:\n",
+    "            continue\n",
+    "        if row[7] >= str(2015) and row[6][:2] in writer_dict.keys():\n",
+    "            writer_dict[row[6][:2]].writerow([row[7], row[6].split(':')[0], row[5].split(':')[0], row[4].split(':')[0], row[8]])\n",
+    "print('Population files prepared')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6fa1c778-d22f-4248-ae75-4ae77d727b3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deaths files prepared\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_name = 'old_deaths.csv'\n",
+    "with ExitStack() as stack:\n",
+    "    writer_dict = {}\n",
+    "    for country in countries.keys():\n",
+    "        file_list = stack.enter_context(open(f'{data_dir_path}/{country}/{file_name}', 'w'))\n",
+    "        writer_dict[countries[country]] = csv.writer(file_list, delimiter=',')\n",
+    "        writer_dict[countries[country]].writerow(['Year', 'Region', 'Age group', 'Sex', 'Value'])\n",
+    "    read = stack.enter_context(open('data/Data/old_deaths.csv', 'r', encoding='utf-8'))\n",
+    "    reader = csv.reader(read)\n",
+    "    for index, row in enumerate(reader):\n",
+    "        if index in [0]:\n",
+    "            continue\n",
+    "        if row[7][:4] >= str(2015) and row[6][:2] in writer_dict.keys():\n",
+    "            writer_dict[row[6][:2]].writerow([row[7], row[6].split(':')[0], row[3].split(':')[0], row[4].split(':')[0], row[8]])\n",
+    "print('Deaths files prepared')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0acdd893-dca1-4bcd-8659-977cd97f1e74",
+   "id": "ff79e2d9-4f5e-460d-b32c-989e257eaa53",
    "metadata": {},
    "outputs": [],
    "source": []
