--- a/prepare_data.ipynb
+++ b/prepare_data.ipynb
@@ -32,7 +32,9 @@
    "outputs": [],
    "source": [
     "today = datetime.date.today().strftime(\"%d-%m-%Y\")\n",
-    "data_dir_path = f'data/World/{today}'"
+    "data_dir_path = f'data/World/{today}'\n",
+    "if not os.path.exists(f'{data_dir_path}'):\n",
+    "        os.mkdir(f'{data_dir_path}')"
    ]
   },
   {
