--- a/germany.ipynb
+++ b/germany.ipynb
@@ -2784,6 +2784,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{\"O'Driscoll\": {'35-59': [0.122, 0.115, 0.128],\n",
+       "  '60-79': [0.992, 0.942, 1.045],\n",
+       "  '80+': [7.274, 6.909, 7.656]},\n",
+       " 'Verity': {'35-59': [0.349, 0.194, 0.743],\n",
+       "  '60-79': [2.913, 1.67, 5.793],\n",
+       "  '80+': [7.8, 3.8, 13.3]},\n",
+       " 'Perez-Saez': {'35-59': [0.07, 0.047, 0.097],\n",
+       "  '60-79': [3.892, 2.985, 5.145],\n",
+       "  '80+': [5.6, 4.3, 7.4]},\n",
+       " 'Levin': {'35-59': [0.226, 0.212, 0.276],\n",
+       "  '60-79': [2.491, 2.294, 3.266],\n",
+       "  '80+': [15.61, 12.2, 19.5]},\n",
+       " 'Driscoll (ours)': {'35-59': [0.14307525980551028,\n",
+       "   0.16705543901878936,\n",
+       "   0.1931643684132524],\n",
+       "  '60-79': [1.1965060413135071, 1.3958914443309223, 1.6147912970366503],\n",
+       "  '80+': [7.105, 8.292, 9.593]}}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFRs = {\n",
+    "    'O\\'Driscoll': {\n",
+    "        '35-59': [0.122, 0.115, 0.128],\n",
+    "        '60-79': [0.992, 0.942, 1.045],\n",
+    "        '80+': [7.274, 6.909, 7.656]\n",
+    "    },\n",
+    "    'Verity': {\n",
+    "        '35-59': [0.349, 0.194, 0.743],\n",
+    "        '60-79': [2.913, 1.670, 5.793],\n",
+    "        '80+': [7.800, 3.800, 13.30]\n",
+    "    },\n",
+    "    'Perez-Saez': {\n",
+    "        '35-59': [0.070, 0.047, 0.097],\n",
+    "        '60-79': [3.892, 2.985, 5.145],\n",
+    "        '80+': [5.600, 4.300, 7.400]\n",
+    "    },\n",
+    "    'Levin': {\n",
+    "        '35-59': [0.226, 0.212, 0.276],\n",
+    "        '60-79': [2.491, 2.294, 3.266],\n",
+    "        '80+': [15.61, 12.20, 19.50]\n",
+    "    },\n",
+    "    'Driscoll (ours)': {\n",
+    "        '35-59': [0.14307525980551028, 0.16705543901878936, 0.1931643684132524],\n",
+    "        '60-79': [1.1965060413135071, 1.3958914443309222, 1.6147912970366503],\n",
+    "        '80+': [7.105, 8.292, 9.593]\n",
+    "                       }\n",
+    "}\n",
+    "IFRs"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "scrolled": true
