--- a/run_simulation.ipynb
+++ b/run_simulation.ipynb
@@ -24,10 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cc148d6b-8954-416c-9e95-f65eba514efb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Population downloaded\n",
+      "Deaths downloaded\n"
+     ]
+    }
+   ],
    "source": [
     "# Download and unzip data file (population and deaths from Eurostat)\n",
     "population_link = 'https://ec.europa.eu/eurostat/api/dissemination/sdmx/2.1/data/DEMO_R_PJANGROUP/?format=SDMX-CSV&lang=en&label=both'\n",
